# backend-ii

projetofinal/: docker-compose.yaml
season1/challenge/: challenge.py
season1/exercise/: exercises.py  exercisescounter.py
season10/exercise/: secure_api.py
season11/exercise/: user_api.py
season12/: cube_client.py  cube_server.py  cube_service.proto
season13/helloworld/config/: tests.py
season13/helloworld/hello/: urls.py  views.py
season13/helloworld/helloworld/: settings.py
season14/exercise/: agent.py
season15/: weather_agent.py
season16/exercise/.github/worflows/: python-tests.yml
season2/design_patterns_api/: makefile  pyproject.toml
season2/design_patterns_api/design_patterns_api/: api.py
season2/exercise/: exercise.py
season3/challenge/: challenge.py
season3/exercises/: exercise.py  sensor_data.json  sensors.py  test.py
season4 /exercise/: parallel_primes.py
season5/challenge/: pyproject.toml
season5/challenge/app/: async_scraper.py  test_scraper.py
season5/exemple/season5_exemple/: pyproject.toml
season5/exercise/season5_exercise/: pyproject.toml
season5/exercise/season5_exercise/src/season5_exercise/: exercise.py
season6/exercise/: advance_async_patterns.py
season6/fakerapi/: Dockerfile  Makefile  pyproject.toml
season6/fakerapi/src/: db.py
season7/exercise/: logging_best_practices.py
season8/exercise/season/: math_operations.py  test_math_operations.py
season9/exercise/blog/: models.py  pytest.ini
season9/exercise/blog/test/: test_blog_models.py  test_blog_views.py
