[project]
name = "fakerapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "typer (>=0.15.2,<0.16.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pymongo (>=4.12.0,<5.0.0)"
]


[tool.poetry]
packages = [{include = "fakerapi", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
ignore = ["E501"]